<resources>
    <string name="app_name">MCDMobile</string>

    <string name="mcd_name">MCD</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="logout">Logout</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>

    <string name="activate_drone">Activate Drone</string>
    <string name="used_drones">Used Drones</string>

    <string name="settings">Settings</string>
    <string name="url">Url</string>

    <string name="email_label">Email:</string>
    <string name="name_label">Name:</string>
    <string name="surname_label">Surname:</string>

    <string name="test_value">Value</string>

    <string name="drone_movement">Drone Movement</string>

    <string name="image_map">Image map</string>
    <string name="title_activity_maps">Map</string>
</resources>
