<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/profileAPIV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/avatar_default_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailLabelTV"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/emailLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintTop_toBottomOf="@+id/profileAPIV"
        app:layout_constraintBottom_toTopOf="@+id/nameLabelTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/emailValueTV"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="@dimen/size12dp" />
    <TextView
        android:id="@+id/emailValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_middle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/emailLabelTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailLabelTV"/>

    <TextView
        android:id="@+id/nameLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintTop_toBottomOf="@+id/emailLabelTV"
        app:layout_constraintBottom_toTopOf="@+id/surnameLabelTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nameValueTV"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="@dimen/size12dp"/>
    <TextView
        android:id="@+id/nameValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_middle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/nameLabelTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabelTV"/>

    <TextView
        android:id="@+id/surnameLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname_label"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintTop_toBottomOf="@+id/nameLabelTV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/surnameValueTV"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="@dimen/size12dp"/>
    <TextView
        android:id="@+id/surnameValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_size_middle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/surnameLabelTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/surnameLabelTV"/>

</android.support.constraint.ConstraintLayout>