<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_blue_green"
    android:fitsSystemWindows="true"
    tools:context=".ui.activites.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_box_radius"
        android:layout_margin="@dimen/padding_layout">

        <LinearLayout
            android:id="@+id/tabs_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/logoutTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/text_size_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:background="@drawable/selector_background_left_main_button"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/mainTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:layout_weight="1"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:background="@drawable/selector_background_center_main_button"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/profileTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="@dimen/text_size_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/size16dp"
                android:paddingBottom="@dimen/size16dp"
                android:background="@drawable/selector_background_right_main_button"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/containerFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabs_ll"
            android:padding="@dimen/padding_layout">

        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>