<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistrationFragment">

    <LinearLayout
        android:id="@+id/registrationLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout"
        android:layout_margin="@dimen/padding_layout"
        android:background="@drawable/background_box_radius"
        android:elevation="4dp"
        android:translationZ="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/registrationTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/color_text_black"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_input">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/background_input"
                android:paddingTop="@dimen/padding_input_top"
                android:paddingBottom="@dimen/padding_input"
                android:paddingStart="@dimen/padding_input"
                android:paddingEnd="@dimen/padding_input" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_input">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/background_input"
                android:paddingTop="@dimen/padding_input_top"
                android:paddingBottom="@dimen/padding_input"
                android:paddingStart="@dimen/padding_input"
                android:paddingEnd="@dimen/padding_input"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/registrationACB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/color_white"
            android:padding="@dimen/padding_input"
            android:background="@drawable/selector_background_button"
            android:layout_marginTop="@dimen/padding_input"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>